navigation fixed position on mobile

--- a/components/navBar/Navigation.module.scss
+++ b/components/navBar/Navigation.module.scss
@@ -4,6 +4,7 @@
 .navigation__container {
     background-color: #FFFFFF;
     border-bottom: 2px solid #E1E1E1;
+    z-index: 10;
 }
 
 .navigation {
